--- a/hw-grid/style.css
+++ b/hw-grid/style.css
@@ -1,26 +1,155 @@
 * {
-    margin: 0;
-    padding-inline-start: 0;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: mulish;
+  /* outline: 1px solid orange; */
+  list-style: none;
 }
 
+/* Font Start */
+/* font-family: "Anonymous Pro", monospace;
+font-family: "Montserrat", sans-serif;
+font-family: "Mulish", sans-serif; */
+/* Font End */
+
+/* ****************************************** */
+
+/* KEY elems Start */
 body {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-}
-
-header, main, footer {
-    display: grid;
-    grid-column: 1/5;
+  margin: 0 auto;
+  padding: 60px 125px;
+  max-width: 1360px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: 0.5fr 5fr 0.5fr;
 }
 
 header {
-    grid-row: 1/2;
+  grid-row: 1;
+  grid-column: 1/20;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 2fr 0.6fr 1fr;
+  grid-row: 2/3;
+  grid-column: 1;
+}
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  grid-row: 19/20;
+  grid-column: 1/20;
+}
+
+/* KEY elems End */
+
+/* ****************************************** */
 svg {
-    height: 100%;
-    width: 10%;
-    padding: 5px 20px;
+  width: 90px;
+  height: 19px;
+}
+ul {
+  display: flex;
+}
+li {
+  padding: 10px;
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-row: 1;
+  grid-column: 1/4;
+}
+.details {
+  /* background-color: green; */
+  grid-row: 1/3;
+  grid-column: 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.details__table-types-ul {
+  color: #111;
+  font-family: Mulish;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  opacity: 0.5;
+}
+.details__table-names-ul {
+  color: #111;
+  font-family: Mulish;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.details__table-names-ul li,
+.details__table-types-ul li {
+  margin-bottom: 15px;
+  border-bottom: 1px solid #979797;
+}
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.main-image {
+  background-color: blue;
+  grid-row: 2;
+  grid-column: 1/4;
+  background-image: url(./img/Image.png);
+  background-size: cover;
+}
+.gallery {
+  grid-row: 4;
+  grid-column: 1/4;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 400px;
+  column-gap: 10px;
+}
+.gallery__cards {
+  background-color: thistle;
+}
+.card1 {
+  background-image: url(./img/card1.png);
+}
+.card2 {
+  background-image: url(./img/card2.png);
+}
+.card3 {
+  background-image: url(./img/card3.png);
+}
+.hero > h1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  color: #111;
+  font-family: Mulish;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 55px; /* 137.5% */
+}
+.hero > p {
+  grid-column: 1/2;
+  grid-row: 2;
+}
+
+.img-description {
+  grid-row: 3/4;
+  grid-column: 1/4;
+  margin-top: 40px;
 }
